--- a/demo.html
+++ b/demo.html
@@ -9,15 +9,7 @@
         </form>
         <p>Added together they are <span id="result"></span></p>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="moment.min.js"></script>
-        <script>
-            $('.input').on('change', function() {
-                var number1 = parseInt($('[name="num1"]').val());
-                var number2 = parseInt($('[name="num2"]').val());
-                var result = number1 + number2;
-                $('#result').text(result);
-            })
-        </script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
         <form>
             Start Date:<br>
             <input type="date" name="start" class="input"><br>
@@ -25,14 +17,18 @@
             <input type="date" name="end" class="input"/>
         </form>
         <p>Length of time between dates is: <span id="days"></span></p>
-        <script src="moment.min.js"></script>
         <script>
+            $('.input').on('change', function() {
+                var number1 = parseInt($('[name="num1"]').val());
+                var number2 = parseInt($('[name="num2"]').val());
+                var result = number1 + number2;
+                $('#result').text(result);
+            })
             moment.fn.diff = function result() {
             $('.input').on('change', function() {
                 var a = moment.$(start);
                 var b = moment.$(end);
                 var days = a.diff(b, 'days')
-                
                 
                 // var a = document.getElementById("start").value;
                 // var b = document.getElementById("end").value;
