--- a/demo.html
+++ b/demo.html
@@ -7,7 +7,8 @@
             Start Date:<br>
             <input type="date" name="start" class="input"><br>
             End Date:<br>
-            <input type="date" name="end" class="input"/>
+            <input type="date" name="end" class="input"><br>
+            <input type="button" name="submit" class="input" value="Submit">
         </form>
         <p>Length of time between dates is: <span id="days"></span></p>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
