--- a/demo.html
+++ b/demo.html
@@ -14,5 +14,11 @@
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
         <script src="demo.js"></script>
+        <form>
+            Amount ($):
+            <input type="text" name="amount" class ="input"><br>
+            Interest Rate (%):
+            <input type="text" name="ir" class ="input"><br>
+        </form>
     </body>
 </html>
