--- a/demo.html
+++ b/demo.html
@@ -8,17 +8,20 @@
             <input type="date" name="start" class="input"><br>
             End Date:<br>
             <input type="date" name="end" class="input"><br>
-            <input type="button" name="submit" class="input" value="Submit">
+           <!-- <input type="button" name="submit" class="input" value="Submit"> -->
         </form>
         <p>Length of time between dates is: <span id="days"></span></p>
         <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-        <script src="demo.js"></script>
+        <!-- <script src="demo.js"></script> -->
         <form>
             Amount ($):
-            <input type="text" name="amount" class ="input"><br>
+            <input type="number" name="amount" id="principal" class ="input"><br>
             Interest Rate (%):
-            <input type="text" name="ir" class ="input"><br>
+            <input type="number" name="ir" id="interest" class ="input"><br>
+            <input type="button" name="submit" class="input" value="Submit">
         </form>
+        <p>Payment is: <span id="payment-calc"></span></p>
+        <script src="demo.js"></script>
     </body>
 </html>
