--- a/demo.html
+++ b/demo.html
@@ -5,23 +5,21 @@
     <body>
         <form>
             Start Date:<br>
-            <input type="date" name="start" class="input"><br>
+            <input type="date" name="start" class="input" id="start-date"><br>
             End Date:<br>
-            <input type="date" name="end" class="input"><br>
-           <!-- <input type="button" name="submit" class="input" value="Submit"> -->
+            <input type="date" name="end" class="input" id="end-date"><br>
         </form>
         <p>Length of time between dates is: <span id="days"></span></p>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
-        <!-- <script src="demo.js"></script> -->
         <form>
             Amount ($):
-            <input type="number" name="amount" id="principal" class ="input"><br>
+            <input type="number" name="principal" class="input" id="principal"><br>
             Interest Rate (%):
-            <input type="number" name="ir" id="interest" class ="input"><br>
-            <input type="button" name="submit" class="input" value="Submit">
+            <input type="number" name="interest" class="input" id="interest"><br>
+            <input type="button" name="submit" class="input" id="submit" value="Submit">
         </form>
-        <p>Payment is: <span id="payment-calc"></span></p>
+        <p>Payment is: <span id="payment-calculation"></span></p>
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
         <script src="demo.js"></script>
     </body>
 </html>
